--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -50,6 +50,7 @@ Legend:
    (#) No label for objects (e.g. section drop'n'down menu) when it has been stored in a "dead" language
    (#) Disabled core update button was clickable
    (#) Checkbox group and radio fields aren't properly validated due to exception in validation method (Issue #910)
+   (#) Entry counter doesn't work when cache is enabled
 
 
 -------------------
