(#) Cached view missing current template name. Override via template package doesn't work

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -55,6 +55,7 @@ Legend:
    (#) Escaping field suffix
    (#) XMLCall error fixed
    (#) Trigger in search called before the priorities have been rearranged
+   (#) Cached view missing current template name. Override via template package doesn't work
 
 
 -------------------
