--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -21,6 +21,9 @@
 ; $HeadURL$
 
 
+SP.SECN.CFG.SETTINGS_BOOTSTRAP_DISABLED="Prevent Bootstrap Loading"
+SP.SECN.CFG.SETTINGS_ADVANCED="Advanced Settings"
+
 ; Joomla! Menu (J 1.5)
 SP.SOBI_SELECT_SECTION="Select Section"
 SOBI_SELECT_SECTION="Select Section"
