--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -34,6 +34,7 @@ Legend:
    (#) Bootstrap not loaded in administrator area when "prevent bootstrap loading" is activated
    (#) Declaration of SPFrontView::setTemplate() incompatible with the interface
    (#) Missing argument 3 for SPField_Category::searchNarrowResults()
+   (#) en-GB preload enabled by default
 
 
 -------------------
