--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -244,7 +244,7 @@ SP.FIELD.TYPE_OPTG_SPECIAL="Special"
 SP.PREDEFINED_MULTI_DATA_MULTI_CHOICE="Multiple predefined data with multiple choice"
 SP.FIELD.TYPE_OPT_PREDEFINED_MULTI_DATA_MULTI_CHOICE_MULTISELECT="Multiple select list"
 SP.FIELD.TYPE_OPT_PREDEFINED_MULTI_DATA_MULTI_CHOICE_CHBXGROUP="Check Box group"
-SP.FIELD.TYPE_OPTG_PREDEFINED_MULTI_DATA_SINGLE_CHOICE="Multiple predefinied data with single choice"
+SP.FIELD.TYPE_OPTG_PREDEFINED_MULTI_DATA_SINGLE_CHOICE="Multiple predefined data with single choice"
 SP.PREDEFINED_MULTI_DATA_SINGLE_CHOICE="Predefined multi data single choice"
 SP.FIELD.TYPE_OPT_PREDEFINED_MULTI_DATA_SINGLE_CHOICE_SELECT="Single select list"
 SP.FIELD.TYPE_OPT_PREDEFINED_MULTI_DATA_SINGLE_CHOICE_RADIO="Radio buttons"
