--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -21,6 +21,8 @@
 ; $HeadURL$
 
 
+SP.CANNOT_UPLOAD_FILE_NO_DATA="Cannot upload file - no data received"
+
 SP.REPO_ERR_APP_DISABLED="This application is disabled and cannot be installed."
 SP.CANNOT_CREATE_CACHE_DIRECTORY="Cannot create temporary cache directory!"
 SP.CANNOT_UPLOAD_FILE_TO="Cannot upload file to %s."
