(#) Wrong directory separator in path comparison for Ajax file upload exception (Issue #930)    (#) Missing select list nodes in a multi select list with list's groups (Issue #953)

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -33,6 +33,8 @@ Legend:
    (#) Wrong parameter in AlphaListingAfterGetEntries Trigger (Issue #964)
    (#) JavaScript file uploader preserving expired form (Issue #928)
    (#) Category field set to non-editable with "fixed choice" method do not allow edit entries (Issue #966)
+   (#) Wrong directory separator in path comparison for Ajax file upload exception (Issue #930)
+   (#) Missing select list nodes in a multi select list with list's groups (Issue #953)
 
 -------------------
 1.1.1 (1 July 2013)
