(#) XMLCall error fixed

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -35,6 +35,7 @@ Legend:
    (#) Category field set to non-editable with "fixed choice" method do not allow edit entries (Issue #966)
    (#) Wrong directory separator in path comparison for Ajax file upload exception (Issue #930)
    (#) Missing select list nodes in a multi select list with list's groups (Issue #953)
+   (#) Template method "BeforeStoreEntry" getting a data array in administrator area but name of the request in frontend
 
 -------------------
 1.1.1 (1 July 2013)
