(#) Missing texts added

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -270,15 +270,19 @@ SP.FMN.FIELD_ENTRYINPUT_URLCOUNTER="Click Counter Settings"
 SP.FMN.IS_REQUIRED="Required"
 SP.FMN.IS_EDITABLE="Editable"
 SP.FMN.IS_SEARCHABLE="Searchable"
+SP.FM.IS_SEARCHABLE="Searchable"
 SP.FMN.ADM_FIELD="Administrative"
 SP.FMN.FIELD_WIDTH="Width"
+SP.FM.FIELD_WIDTH="Width"
 SP.FMN.FIELD_SIZE="Size"
 SP.FMN.FIELD_HEIGHT="Height"
+SP.FM.FIELD_HEIGHT="Height"
 SP.FMN.FIELD_FEE="Fee"
 SP.FMN.FIELD_LABEL="Label"
 SP.FMN.FIELD_TYPE="Type"
 SP.FMN.AVAILABLE_IN="Availability"
 SP.FMN.HIDDEN_OPT="None"
+SP.FM.HIDDEN_OPT="None"
 SP.FMN.SEL.WIDTH_IN_SEARCH="Width"
 SP.FMN.SEL.SIZE_IN_SEARCH="Size"
 SP.FMN.EMAIL.OWN_TITLE="Custom Title"
@@ -298,6 +302,7 @@ SP.FM.URL.COUNT_CLICKS="Count Clicks"
 SP.FM.URL.COUNTER_TO_LABEL="Add Counter to Label"
 SP.FMN.RADIO.DEFSEL="Default Option"
 SP.FMN.IMG.MAX_FILE_SIZE="max. File Size"
+SP.FM.IMG.MAX_FILE_SIZE="max. File Size"
 SP.FMN.IMG.IMAGE_SAVE_PATH="Path"
 SP.FMN.IMG.KEEP_ORG="Keep Original Image"
 SP.FM.IMG.RESIZEHEIGHT_TO="Resize Height to"
