Download Field - administrator area

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -21,6 +21,8 @@
 ; $HeadURL$
 
 
+SP.MSG_DEFAULT_ORDERING_SAVED="Current ordering has been saved as default"
+
 ; Joomla! Menu (J 1.5)
 SP.SOBI_SELECT_SECTION="Select Section"
 SOBI_SELECT_SECTION="Select Section"
