--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
@@ -20,6 +20,7 @@
 ; $Author$
 ; $HeadURL$
 
+SP.JS_STORE_DEFAULT_ORDERING="Do you want to store current ordering as default one?"
 
 ;SP.JS_SELECT_CATEGORY="Select category"
 SP.JS_PLEASE_SELECT_SECTION_FIRST="Please select a section first."
