(#) Error when trying to add entry in backend with a filter set (Issue #990)

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -43,6 +43,7 @@ Legend:
    (#) Missing select list nodes in a multi select list with list's groups (Issue #953)
    (#) Template method "BeforeStoreEntry" gets data array in administrator area but name of the request in frontend
    (#) No category/section title when page number has been added
+   (#) Error when trying to add entry in backend with a filter set (Issue #990)
 
 
 -------------------
