(#) Image field as required field doesn't work (Issue #974)

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -44,6 +44,7 @@ Legend:
    (#) Template method "BeforeStoreEntry" gets data array in administrator area but name of the request in frontend
    (#) No category/section title when page number has been added
    (#) Error when trying to add entry in backend with a filter set (Issue #990)
+   (#) Image field as required field doesn't work (Issue #974)
 
 
 -------------------
