--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -27,12 +27,12 @@ Legend:
  (!) - Change
 
 -------------------
-1.1.2 (XX July 2013)
+1.1.2 (xx August 2013)
 -------------------
 
    (+) Calling Joomla! Cache cleaner after SobiPro cache has been invalidated
    (+) Keep-Alive method to avoid session expire
-   (+) Possibility to permanent store ordering of lists in administrator area
+   (+) Possibility to store ordering of lists in administrator area permanently
    (+) Information about entry's status while displaying unapproved/unpublished version in default template
 
    (!) Style revisions to default2 template and SobiPro frontend CSS
@@ -43,6 +43,7 @@ Legend:
    (#) Wrong directory separator in path comparison for Ajax file upload exception (Issue #930)
    (#) Missing select list nodes in a multi select list with list's groups (Issue #953)
    (#) Template method "BeforeStoreEntry" gets data array in administrator area but name of the request in frontend
+   (#) Missing texts for apps added
    (#) No category/section title when page number has been added
    (#) Error when trying to add entry in backend with a filter set (Issue #990)
    (#) Image field as required field doesn't work (Issue #974)
