--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -34,10 +34,10 @@ Legend:
    (+) Keep-Alive method to avoid session expire
    (+) Possibility to store ordering of lists in administrator area permanently
    (+) Information about entry's status while displaying unapproved/unpublished version in default template
-   (+) Storing currently displayed entries into user state
+   (+) Storing currently displayed entries into 'user state'
 
    (!) Style revisions to default2 template and SobiPro frontend CSS
-   (!) Added php-prefix exclusion to all template in default2 template package
+   (!) php-prefix exclusion added to all templates in default2 template package
 
    (#) Wrong parameter in AlphaListingAfterGetEntries Trigger (Issue #964)
    (#) JavaScript file uploader preserving expired form (Issue #928)
@@ -50,11 +50,11 @@ Legend:
    (#) Error when trying to add entry in backend with a filter set (Issue #990)
    (#) Image field as required field doesn't work (Issue #974)
    (#) Alpha search field selector missing the field alias (Issue #980)
-   (#) Category icons on the windows machines (Issue #997)
+   (#) Category icons on Windows machines (Issue #997)
    (#) Publishing entry from frontend - cache issue (Issue #1000)
    (#) Entry not checked in while hitting "exit" in administrator area
    (#) Entry approve in frontend gives success message in a warning message type container
-   (#) Fixed several validations' errors in default RSS feed template
+   (#) Fixed several validation errors in default2 RSS feed template
 
 -------------------
 1.1.1 (1 July 2013)
