--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -27,6 +27,15 @@ Legend:
  (!) - Change
 
 -------------------
+1.1.3 (xx September 2013)
+-------------------
+
+   (#) Language of common frontend and backend texts (Issue #1012)
+   (#) Backend search for entry returns categories (Issue #1022)
+   (#) Editing entries with image field set as required (Issue #1017)
+   (#) Category Name as Alias in SobiPro 1.1.2 (Issue #1015)
+
+-------------------
 1.1.2 (22 August 2013)
 -------------------
 
