--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
@@ -20,6 +20,10 @@
 ; $Author$
 ; $HeadURL$
 
+
+SP.JS_ENTRY_REJECT_TEMPLATE_NAME_PROMPT="Choose a name for the template"
+SP.JS_ENTRY_REJECT_TEMPLATE_DELETE="Are you sure you want to delete the selected template?"
+
 SP.JS_STORE_DEFAULT_ORDERING="Do you want to store current ordering as default?"
 
 ;SP.JS_SELECT_CATEGORY="Select category"
