--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -33,6 +33,7 @@ SP.ENTRY_REJECT_SAVE_TPL="Save as a Template"
 SP.ENTRY_REJECT_SAVED_TPL="Template has been saved"
 SP.ENTRY_REJECT_DELETED_TPL="Template has been deleted"
 SP.ENTRY_REJECTED="Entry '%s' has been rejected"
+SP.ENTRY_VERSIONING="Entry History"
 
 
 SP.EN.ENTRY_HISTORY="History"
