--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -46,6 +46,7 @@ SP.HEAD_HISTORY_LOAD="Load"
 SP.HISTORY_CHANGE_TYPE_SAVE="Edit/Update"
 SP.HISTORY_CHANGE_TYPE_REJECT="Rejection"
 SP.HISTORY_CHANGE_TYPE_CHANGE_STATE="State Change"
+SP.HISTORY_CHANGE_TYPE_APPROVE="Approval"
 SP.HISTORY_CHANGE_AREA_ADM="Administrator Area"
 SP.HISTORY_CHANGE_AREA_SITE="Frontend Area"
 SP.HISTORY_LOAD="Load This Version"
