--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -34,11 +34,14 @@ Legend:
    (+) Rejection functionality
    (+) Version management
 
+   (!) Default input style for URL and Email field improved
+
    (#) Language of common frontend and backend texts (Issue #1012)
    (#) Backend search for entry returns categories (Issue #1022)
    (#) Editing entries with image field set as required (Issue #1017)
    (#) Category Name as Alias in SobiPro 1.1.2 (Issue #1015)
    (#) Error while installing Joomla! native extensions in SobiPro (Issue #1013)
+
 
 -------------------
 1.1.2 (22 August 2013)
