sp 1.1.3 history/reject layout und text

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -24,22 +24,22 @@
 SP.HEADER_ENTRIES_REJECT="Reject"
 SP.ENTRY_REJECT="Reject Entry"
 SP.ENTRY_REJECT_TPLS="Preload Template"
-SP.ENTRY_REJECT_REASON="Rejection's reason"
+SP.ENTRY_REJECT_REASON="Reason for rejection"
 SP.ENTRY_REJECT_TRIGGER_UNPUBLISH="Trigger Unpublish"
 SP.ENTRY_REJECT_TRIGGER_UNAPPROVE="Trigger Unapprove"
 SP.ENTRY_REJECT_UNPUBLISH="Unpublish Entry"
 SP.ENTRY_REJECT_DISCARD="Discard Changes"
-SP.ENTRY_REJECT_SAVE_TPL="Save as a Template"
-SP.ENTRY_REJECT_SAVED_TPL="Template has been saved"
-SP.ENTRY_REJECT_DELETED_TPL="Template has been deleted"
-SP.ENTRY_REJECTED="Entry '%s' has been rejected"
+SP.ENTRY_REJECT_SAVE_TPL="Save as Template"
+SP.ENTRY_REJECT_SAVED_TPL="Template has been saved."
+SP.ENTRY_REJECT_DELETED_TPL="Template has been deleted."
+SP.ENTRY_REJECTED="Entry '%s' has been rejected."
 SP.ENTRY_VERSIONING="Entry History"
 
 
 SP.EN.ENTRY_HISTORY="History"
-SP.HEAD_HISTORY_DATE="Change Date"
+SP.HEAD_HISTORY_DATE="Alteration Date"
 SP.HEAD_HISTORY_TYPE="Type"
-SP.HEAD_HISTORY_CHANGED_BY="Made By"
+SP.HEAD_HISTORY_CHANGED_BY="Made by"
 SP.HEAD_HISTORY_NOTE="Note"
 SP.HEAD_HISTORY_SITE="Area"
 SP.HEAD_HISTORY_LOAD="Load"
@@ -49,10 +49,10 @@ SP.HISTORY_CHANGE_TYPE_CHANGE_STATE="State Change"
 SP.HISTORY_CHANGE_TYPE_APPROVE="Approval"
 SP.HISTORY_CHANGE_AREA_ADM="Administrator Area"
 SP.HISTORY_CHANGE_AREA_SITE="Frontend Area"
-SP.HISTORY_LOAD="Load This Version"
-SP.HISTORY_REVISION_NOT_FOUND="Revision not found"
-SP.HISTORY_REVISION_WARNING="Heads up! you are currently editing a version of the entry from %s. If you save the entry now you'll override the actual version with the currently loaded version"
-SP.HISTORY_NOTE="Reason for Editing"
+SP.HISTORY_LOAD="Load this Version"
+SP.HISTORY_REVISION_NOT_FOUND="Revision not found."
+SP.HISTORY_REVISION_WARNING="<strong>Heads up!</strong> You are currently editing a version of the entry from %s. If you save the entry now, you'll override the actual version with the currently loaded version!"
+SP.HISTORY_NOTE="Reason for changes"
 SP.HISTORY_REVISION_COMPARE="Compare Revisions"
 SP.HISTORY_REVISION_CURRENT="Current Version"
 SP.HISTORY_REVISION_LOADED="Loaded Version"
