--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -36,6 +36,7 @@ Legend:
    (+) Support for custom templates override while adding menu item
 
    (!) Default input style for URL and Email field improved
+   (!) Moved header output to a separate plugin
 
    (#) Language of common frontend and backend texts (Issue #1012)
    (#) Backend search for entry returns categories (Issue #1022)
