--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -36,9 +36,9 @@ Legend:
    (+) Support for custom templates override while adding menu item
 
    (!) Default input style for URL and Email field improved
-   (!) Moved header output to a separate plugin
+   (!) Header output moved to a separate plugin
 
-   (#) Language of common frontend and backend texts (Issue #1012)
+//   (#) Language of common frontend and backend texts (Issue #1012)
    (#) Backend search for entry returns categories (Issue #1022)
    (#) Editing entries with image field set as required (Issue #1017)
    (#) Error while installing Joomla! native extensions in SobiPro (Issue #1013)
